k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meme-service
spec:
  selector:
    app: meme-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888
