k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: meme-service
spec:
  to:
    kind: Service
    name: meme-service
